<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mullvad="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="left"
    android:orientation="vertical">

    <TextView
        android:id="@+id/expanded_title"
        style="@style/SettingsExpandedHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginTop="2dp"
        android:lines="1"
        android:text="@string/settings_advanced" />

    <net.mullvad.mullvadvpn.ui.widget.MtuCell
        android:id="@+id/wireguard_mtu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_space"
        android:focusable="true"
        android:focusableInTouchMode="true"
        mullvad:text="@string/wireguard_mtu" />

    <net.mullvad.mullvadvpn.ui.widget.NavigateCell
        android:id="@+id/split_tunneling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_space"
        mullvad:text="@string/split_tunneling" />

    <net.mullvad.mullvadvpn.ui.widget.ToggleCell
        android:id="@+id/enable_auto_obfuscation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_space"
        mullvad:text="@string/enable_auto_obfuscation" />

    <net.mullvad.mullvadvpn.ui.widget.ToggleCell
        android:id="@+id/enable_custom_dns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_space"
        mullvad:text="@string/enable_custom_dns" />
</LinearLayout>
