<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="30dp"
                  android:background="@drawable/dialog_background"
                  android:orientation="vertical"
                  android:gravity="left">
        <ImageView android:layout_width="44dp"
                   android:layout_height="44dp"
                   android:layout_marginTop="8dp"
                   android:layout_gravity="center"
                   android:src="@drawable/icon_alert" />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="0"
                  android:layout_marginTop="16dp"
                  android:textColor="@color/white80"
                  android:textSize="@dimen/text_small"
                  android:text="@string/confirm_local_dns" />
        <Button android:id="@+id/confirm_button"
                android:layout_marginVertical="@dimen/button_separation"
                android:text="@string/add_anyway"
                style="@style/RedButton" />
        <Button android:id="@+id/back_button"
                android:text="@string/back"
                style="@style/BlueButton" />
    </LinearLayout>
</ScrollView>
