<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:mullvad="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout android:id="@+id/header_bar"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentTop="true"
                  android:orientation="horizontal"
                  android:gravity="center_vertical"
                  android:background="@color/red"
                  android:elevation="0.5dp">
        <ImageView android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:layout_marginLeft="12dp"
                   android:layout_marginVertical="12dp"
                   android:layout_weight="0"
                   android:src="@drawable/logo_icon" />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginHorizontal="8dp"
                  android:layout_marginVertical="12dp"
                  android:layout_weight="1"
                  android:textColor="@color/white80"
                  android:textSize="24sp"
                  android:textStyle="bold"
                  android:text="@string/app_name"
                  android:textAllCaps="true" />
        <ImageButton android:id="@+id/settings"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="0"
                     android:paddingHorizontal="12dp"
                     android:background="?android:attr/selectableItemBackground"
                     android:src="@drawable/icon_settings" />
    </LinearLayout>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/header_bar"
                android:fillViewport="true">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginHorizontal="24dp"
                      android:layout_marginTop="24dp"
                      android:textColor="@color/white"
                      android:textSize="32sp"
                      android:textStyle="bold"
                      android:text="@string/congrats" />
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginHorizontal="24dp"
                      android:layout_marginTop="8dp"
                      android:layout_marginBottom="11dp"
                      android:textColor="@color/white"
                      android:textSize="13sp"
                      android:text="@string/here_is_your_account_number" />
            <TextView android:id="@+id/account_number"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingHorizontal="24dp"
                      android:paddingVertical="11dp"
                      android:clickable="true"
                      android:background="?android:attr/selectableItemBackground"
                      android:textColor="@color/white"
                      android:textSize="24sp"
                      android:textStyle="bold"
                      android:text="" />
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginHorizontal="24dp"
                      android:layout_marginTop="11dp"
                      android:textColor="@color/white"
                      android:textSize="13sp"
                      android:text="@string/pay_to_start_using" />
            <Space android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1" />
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:padding="24dp"
                          android:background="@color/darkBlue">
                <net.mullvad.mullvadvpn.ui.widget.UrlButton android:id="@+id/buy_credit"
                                                            android:layout_width="match_parent"
                                                            android:layout_height="wrap_content"
                                                            android:layout_marginBottom="24dp"
                                                            mullvad:buttonColor="green"
                                                            mullvad:text="@string/buy_credit"
                                                            mullvad:url="@string/account_url"
                                                            mullvad:withToken="true" />
                <net.mullvad.mullvadvpn.ui.widget.Button android:id="@+id/redeem_voucher"
                                                         android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         mullvad:buttonColor="green"
                                                         mullvad:text="@string/redeem_voucher" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
