<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:mullvad="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="30dp"
                  android:background="@drawable/dialog_background"
                  android:orientation="vertical"
                  android:gravity="left">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="0"
                  android:layout_marginBottom="9dp"
                  android:textColor="@color/white"
                  android:textSize="@dimen/text_medium"
                  android:text="@string/enter_voucher_code" />
        <EditText android:id="@+id/voucher_code"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="14dp"
                  android:background="@drawable/edit_text_background"
                  android:singleLine="true"
                  android:imeActionLabel="@string/redeem"
                  android:imeOptions="flagNoPersonalizedLearning"
                  android:inputType="textCapCharacters"
                  android:textCursorDrawable="@drawable/text_input_cursor"
                  android:hint="@string/voucher_hint"
                  android:maxLength="19"
                  android:digits="0123456789-ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
                  android:textAllCaps="true"
                  android:textColorHint="@color/blue40"
                  android:textColor="@color/blue"
                  android:textSize="@dimen/text_small"
                  android:textStyle="bold" />
        <TextView android:id="@+id/error"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="8dp"
                  android:textColor="@color/red"
                  android:textSize="@dimen/text_small"
                  android:textStyle="bold"
                  android:visibility="invisible" />
        <net.mullvad.mullvadvpn.ui.widget.Button android:id="@+id/redeem"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
                                                 android:layout_marginVertical="@dimen/button_separation"
                                                 mullvad:showSpinner="true"
                                                 mullvad:buttonColor="green"
                                                 mullvad:text="@string/redeem" />
        <net.mullvad.mullvadvpn.ui.widget.Button android:id="@+id/cancel"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
                                                 mullvad:buttonColor="blue"
                                                 mullvad:text="@string/cancel" />
    </LinearLayout>
</ScrollView>
